namespace Unicorn.Utilities
{
	public static class Helper
	{
		public const string PLAYER_ANIM_ISBOSSCOMBO = "isBossCombo";

		public const string PLAYER_ANIM_ISATTACK = "isAttack";

		public const string PLAYER_ANIM_ATTACKINDEX = "attackIndex";

		public const string PLAYER_ANIM_ISGRAB = "isGrab";

		public const string PLAYER_ANIM_ISGRABRELEASE = "isGrabRelease";

		public const string PLAYER_ANIM_ISDAMAGE = "isDamage";

		public const string PLAYER_ANIM_DAMAGEINDEX = "damageIndex";

		public const string PLAYER_ANIM_ISWIN = "isWin";

		public const string PLAYER_ANIM_ISOPENCHEST = "isOpenChest";

		public const string PLAYER_ANIM_ISSLASHBONUS = "isSlashBonus";

		public const string PLAYER_ANIM_ISGETITEM = "isGetItem";

		public const string PLAYER_ANIM_ISCHANGESIZE = "isChangeSize";

		public const string PLAYER_ANIM_ISRUNNING = "isRunning";

		public const string DataBrothel = "DataBrothel";

		public const string DataLevel = "DataLevel";

		public const string DataMaxLevelReached = "DataMaxLevelReached";

		public const string DataTypeSkin = "DataTypeSkin";

		public const string DataTypePet = "DataTypePet";

		public const string DataTypeHat = "DataTypeHat";

		public const string DataEquipHat = "DataEquipHat";

		public const string DataEquipSkin = "DataEquipSkin";

		public const string DataEquipPet = "DataEquipPet";

		public const string DataNumberWatchVideo = "DataNumberWatchVideo";

		public const string GOLD = "GOLD";

		public const string GEM = "GEM";

		public const string KEY = "KEY";

		public const string CurrentRewardEndGame = "CurrentRewardEndGame";

		public const string ProcessReceiveEndGame = "ProcessReceiveEndGame";

		public const string inter_end_game_lose = "inter_end_game_lose";

		public const string inter_end_game_win = "inter_end_game_win";

		public const string video_shop_general = "video_shop_{0}";

		public const string video_reward_end_game = "video_reward_end_game";

		public const string video_reward_chest_key = "video_reward_chest_key";

		public const string video_reward_lucky_wheel = "video_reward_lucky_wheel";

		public const string video_reward_revive = "video_reward_revive";

		public const string video_reward_x3_gold_end_game = "video_x3_gold_end_game";

		public const string video_reward_gift_box = "video_reward_gift_box";

		public const string video_reward_skip = "video_reward_skip";

		public const string video_reward_restart = "video_reward_start";

		public const string video_reward_x2Ingame = "video_reward_x2Ingame";

		public const string video_reward_pickWeapon = "video_reward_pickWeapon";

		public const string video_reward_brothelRoomunlock = "video_reward_brothelRoomunlock";

		public const string SoundSetting = "SoundSetting";

		public const string MusicSetting = "MusicSetting";

		public const string VibrateSetting = "VibrateSetting";

		public static string FormatTime(int minute, int second, bool isSpaceSpecial = false)
		{
			return null;
		}

		public static int GetRandomGoldReward()
		{
			return default(int);
		}

		public static bool CheckNewDay(string stringTimeCheck, bool isUnbiasedTime)
		{
			return default(bool);
		}
	}
}
